src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_StyleSetterChild3.xaml
<!--
/*******************************************************************
 * Purpose: Nested Style child under Style Setter tag.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_StyleSetterChild3.xaml $
********************************************************************/
-->
<Page
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
    <DockPanel>
        <DockPanel.Resources>
            <Style TargetType="{x:Type Button}">
                <Setter Property="Background" Value="Blue">
                    <Style />
                </Setter>

            </Style>
        </DockPanel.Resources>
    </DockPanel>
</Page>
